<resources>
    <string name="app_name" translatable="false">MFL</string>
    <string name="nome_app" translatable="false">GamesList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blanEEEEEEEEE</string>
    <string name="accedi" translatable="false">Accedi</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="passdime" translatable="false">Password dimenticata</string>
    <string name="txt_or" translatable="false">OR</string>
    <string name="noaccount" translatable="false">Non hai un account? Registrati</string>
    <string name="reg" translatable="false">Registrati</string>

</resources>